WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274985
Fix same-site cookie quirk for bing.com
https://bugs.webkit.org/show_bug.cgi?id=274985
Summary
Fix same-site cookie quirk for bing.com
Matthew Finkel
Reported
2024-05-31 12:53:44 PDT
The quirk introduced in
278277@main
didn't fix the breakage
Attachments
Add attachment
proposed patch, testcase, etc.
Matthew Finkel
Comment 1
2024-05-31 12:53:55 PDT
<
rdar://problem/128956265
>
Matthew Finkel
Comment 2
2024-05-31 12:56:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29391
EWS
Comment 3
2024-06-03 15:33:20 PDT
Committed
279675@main
(2456802a5836): <
https://commits.webkit.org/279675@main
> Reviewed commits have been landed. Closing PR #29391 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug