Fix same-site cookie quirk for bing.com https://bugs.webkit.org/show_bug.cgi?id=274985 rdar://128956265

Reviewed by Pascoe.

The original quirk only looked at the current document's URL. This was
insufficient because we need the quirk to apply on a cross-site from
https://login.microsoftonline.com to https://www.bing.com. Now this quirk
checks both the current document and the request URLs.

* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::FrameLoader::addSameSiteInfoToRequestIfNeeded):
* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::needsLaxSameSiteCookieQuirk const):
* Source/WebCore/page/Quirks.h:

Canonical link: https://commits.webkit.org/279675@main