Source/WebCore/page/Quirks.h
@@ -191,7 +191,7 @@ public:
 
     bool needsGetElementsByNameQuirk() const;
     bool needsRelaxedCorsMixedContentCheckQuirk() const;
-    bool needsLaxSameSiteCookieQuirk() const;
+    bool needsLaxSameSiteCookieQuirk(const URL&) const;
 
 private:
     bool needsQuirks() const;
@@ -265,7 +265,6 @@ private:
     mutable std::optional<bool> m_shouldDisableElementFullscreen;
     mutable std::optional<bool> m_shouldIgnorePlaysInlineRequirementQuirk;
     mutable std::optional<bool> m_needsRelaxedCorsMixedContentCheckQuirk;
-    mutable std::optional<bool> m_needsLaxSameSiteCookieQuirk;
 
     Vector<RegistrableDomain> m_subFrameDomainsForStorageAccessQuirk;
 };
